@@ -669,6 +669,7 @@ if __name__=='pymol.setting':
         motion_hand                        = 631
         pdb_ignore_conect                  = 632
         editor_bond_cycle_mode             = 633
+        movie_quality                      = 634
         
     setting_sc = Shortcut(SettingIndex.__dict__.keys())
     
